--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Marktato api",
   "main": "node ./server.js",
   "scripts": {
+    "nodemon": "nodemon ./server.js",
     "start": "node ./server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,7 +15,8 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jest": "^21.24.1",
-    "jest": "^23.6.0"
+    "jest": "^23.6.0",
+    "nodemon": "^1.18.4"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
