--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Marktato api",
   "main": "node ./server.js",
   "scripts": {
-    "nodemon": "nodemon ./server.js",
+    "nodemon": "nodemon -L ./server.js",
     "start": "node ./server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
