--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,38 @@ version: '3'
 services:
   api:
     build: .
+    container_name: "marktato_api"
     command: npm run nodemon
+    environment:
+      - NODE_ENV=development
+      - mongodb=mongodb://${MONGO_USER}:${MONGO_PASSWORD}@mongo/${DATABASE_NAME}
     ports:
      - "3000:3000"
     volumes:
       - .:/usr/app/
       - /usr/app/node_modules
+    links:
+      - mongo
+    depends_on:
+      - mongo
+  mongo:
+    image: mongo
+    container_name: "mongodb"
+    volumes:
+      - ./data/db:/data/db
+    ports:
+      - 27017:27017
+    restart: always
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_USER}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_PASSWORD}
+      - MONGO_DATA_DIR=/data/db
+      - MONGO_LOG_DIR=/dev/null
+  mongo-express:
+    image: mongo-express
+    restart: always
+    ports:
+      - 8081:8081
+    environment:
+      - ME_CONFIG_MONGODB_ADMINUSERNAME=${MONGO_USER}
+      - ME_CONFIG_MONGODB_ADMINPASSWORD=${MONGO_PASSWORD}
