Added apollo client to test graphql

--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "nodemon": "^1.18.4"
   },
   "dependencies": {
+    "apollo-server": "^2.1.0",
+    "apollo-server-express": "^2.1.0",
     "body-parser": "^1.18.3",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "graphql": "^14.0.2"
   }
 }
