--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,12 @@ services:
     command: npm run nodemon
     environment:
       - NODE_ENV=development
-      - mongodb=mongodb://${MONGO_USER}:${MONGO_PASSWORD}@mongo/${DATABASE_NAME}
+      - mongodb=mongodb://mongo/${DATABASE_NAME}
     ports:
      - "3000:3000"
     volumes:
       - .:/usr/app/
-      - /usr/app/node_modules
+      - ./node_modules/:/usr/app/node_modules/
     links:
       - mongo
     depends_on:
@@ -25,8 +25,7 @@ services:
       - 27017:27017
     restart: always
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=${MONGO_USER}
-      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_PASSWORD}
+      - MONGO_INITDB_DATABASE=${DATABASE_NAME}
       - MONGO_DATA_DIR=/data/db
       - MONGO_LOG_DIR=/dev/null
   mongo-express:
